crates/emitter-angular/tests/snapshots/snapshots__snapshot_allof_conflict_angular.snap
---
source: crates/emitter-angular/tests/snapshots.rs
expression: emit_angular(yaml)
---
// Generated by oa-forge. Do not edit.

import { Injectable } from '@angular/core';
import { HttpClient, HttpParams } from '@angular/common/http';
import type { Observable } from 'rxjs';
import type { listEntitiesResponse } from './types.gen';

@Injectable({ providedIn: 'root' })
export class ApiService {
  constructor(private http: HttpClient) {}

  listEntities(): Observable<listEntitiesResponse> {
    return this.http.get<listEntitiesResponse>(`/entities`);
  }

}
