crates/emitter-angular/tests/snapshots/snapshots__snapshot_anyof_plain_angular.snap
---
source: crates/emitter-angular/tests/snapshots.rs
expression: emit_angular(yaml)
---
// Generated by oa-forge. Do not edit.

import { Injectable } from '@angular/core';
import { HttpClient, HttpParams } from '@angular/common/http';
import type { Observable } from 'rxjs';
import type { searchResponse, searchBody, listNotificationsResponse } from './types.gen';

@Injectable({ providedIn: 'root' })
export class ApiService {
  constructor(private http: HttpClient) {}

  search(body: searchBody): Observable<searchResponse> {
    return this.http.post<searchResponse>(`/search`, body);
  }

  listNotifications(): Observable<listNotificationsResponse> {
    return this.http.get<listNotificationsResponse>(`/notifications`);
  }

}
