crates/emitter-angular/tests/snapshots/snapshots__snapshot_coverage_gaps_angular.snap
---
source: crates/emitter-angular/tests/snapshots.rs
expression: emit_angular(yaml)
---
// Generated by oa-forge. Do not edit.

import { Injectable } from '@angular/core';
import { HttpClient, HttpParams } from '@angular/common/http';
import type { Observable } from 'rxjs';
import type { listItemsQueryParams, listItemsResponse, getItemPathParams, getItemResponse } from './types.gen';

@Injectable({ providedIn: 'root' })
export class ApiService {
  constructor(private http: HttpClient) {}

  listItems(queryParams?: listItemsQueryParams): Observable<listItemsResponse> {
    let params = new HttpParams();
    if (queryParams) {
      for (const [key, value] of Object.entries(queryParams)) {
        if (value !== undefined) params = params.set(key, String(value));
      }
    }
    return this.http.get<listItemsResponse>(`/items`, {{ params }});
  }

  getItem(pathParams: getItemPathParams): Observable<getItemResponse> {
    return this.http.get<getItemResponse>(`/items/${pathParams.itemId}`);
  }

}
