crates/emitter-angular/tests/snapshots/snapshots__snapshot_edge_cases_angular.snap
---
source: crates/emitter-angular/tests/snapshots.rs
expression: emit_angular(yaml)
---
// Generated by oa-forge. Do not edit.

import { Injectable } from '@angular/core';
import { HttpClient, HttpParams } from '@angular/common/http';
import type { Observable } from 'rxjs';
import type { Get__no-operation-idResponse, replaceAllVoidBody, noParamSchemaQueryParams, noParamSchemaResponse, deeplyNestedResponse, nullableArrayResponse, enumOnlyResponseResponse, emptyObjectBodyResponse, emptyObjectBodyBody, multipleSuccessCodesResponse, multipleSuccessCodesBody } from './types.gen';

@Injectable({ providedIn: 'root' })
export class ApiService {
  constructor(private http: HttpClient) {}

  Get__no-operation-id(): Observable<Get__no-operation-idResponse> {
    return this.http.get<Get__no-operation-idResponse>(`/no-operation-id`);
  }

  emptyResponses(): Observable<void> {
    return this.http.post<void>(`/empty-responses`, null);
  }

  replaceAllVoid(body: replaceAllVoidBody): Observable<void> {
    return this.http.put<void>(`/all-void`, body);
  }

  deleteAllVoid(): Observable<void> {
    return this.http.delete<void>(`/all-void`);
  }

  noParamSchema(queryParams?: noParamSchemaQueryParams): Observable<noParamSchemaResponse> {
    let params = new HttpParams();
    if (queryParams) {
      for (const [key, value] of Object.entries(queryParams)) {
        if (value !== undefined) params = params.set(key, String(value));
      }
    }
    return this.http.get<noParamSchemaResponse>(`/no-param-schema`, {{ params }});
  }

  deeplyNested(): Observable<deeplyNestedResponse> {
    return this.http.get<deeplyNestedResponse>(`/deeply-nested`);
  }

  onlyErrorResponse(): Observable<void> {
    return this.http.get<void>(`/only-error-response`);
  }

  nullableArray(): Observable<nullableArrayResponse> {
    return this.http.get<nullableArrayResponse>(`/nullable-array`);
  }

  enumOnlyResponse(): Observable<enumOnlyResponseResponse> {
    return this.http.get<enumOnlyResponseResponse>(`/enum-only-response`);
  }

  emptyObjectBody(body: emptyObjectBodyBody): Observable<emptyObjectBodyResponse> {
    return this.http.post<emptyObjectBodyResponse>(`/empty-object-body`, body);
  }

  textResponse(): Observable<string> {
    return this.http.get<string>(`/text-response`, {{ responseType: 'text' as const }});
  }

  blobResponse(): Observable<Blob> {
    return this.http.get<Blob>(`/blob-response`, {{ responseType: 'blob' as const }});
  }

  multipleSuccessCodes(body: multipleSuccessCodesBody): Observable<multipleSuccessCodesResponse> {
    return this.http.post<multipleSuccessCodesResponse>(`/multiple-success-codes`, body);
  }

}
