crates/emitter-angular/tests/snapshots/snapshots__snapshot_error_responses_angular.snap
---
source: crates/emitter-angular/tests/snapshots.rs
expression: emit_angular(yaml)
---
// Generated by oa-forge. Do not edit.

import { Injectable } from '@angular/core';
import { HttpClient, HttpParams, HttpHeaders } from '@angular/common/http';
import type { Observable } from 'rxjs';
import type { listUsersQueryParams, listUsersResponse, listUsersError, createUserResponse, createUserBody, createUserError, getUserPathParams, getUserResponse, getUserError, deleteUserPathParams, deleteUserError } from './types.gen';

@Injectable({ providedIn: 'root' })
export class ApiService {
  constructor(private http: HttpClient) {}

  listUsers(queryParams?: listUsersQueryParams): Observable<listUsersResponse> {
    let params = new HttpParams();
    if (queryParams) {
      for (const [key, value] of Object.entries(queryParams)) {
        if (Array.isArray(value)) {
          for (const v of value) params = params.append(key, String(v));
        } else if (value !== undefined) {
          params = params.set(key, String(value));
        }
      }
    }
    return this.http.get<listUsersResponse>(`/users`, { params });
  }

  createUser(body: createUserBody): Observable<createUserResponse> {
    return this.http.post<createUserResponse>(`/users`, body);
  }

  getUser(pathParams: getUserPathParams): Observable<getUserResponse> {
    return this.http.get<getUserResponse>(`/users/${pathParams.userId}`);
  }

  deleteUser(pathParams: deleteUserPathParams): Observable<void> {
    return this.http.delete<void>(`/users/${pathParams.userId}`);
  }

}
