crates/emitter-angular/tests/snapshots/snapshots__snapshot_header_cookie_params_angular.snap
---
source: crates/emitter-angular/tests/snapshots.rs
expression: emit_angular(yaml)
---
// Generated by oa-forge. Do not edit.

import { Injectable } from '@angular/core';
import { HttpClient, HttpParams, HttpHeaders } from '@angular/common/http';
import type { Observable } from 'rxjs';
import type { listResourcesQueryParams, listResourcesHeaderParams, listResourcesResponse, getResourcePathParams, getResourceHeaderParams, getResourceCookieParams, getResourceResponse } from './types.gen';

@Injectable({ providedIn: 'root' })
export class ApiService {
  constructor(private http: HttpClient) {}

  listResources(queryParams?: listResourcesQueryParams, headerParams?: listResourcesHeaderParams): Observable<listResourcesResponse> {
    let params = new HttpParams();
    if (queryParams) {
      for (const [key, value] of Object.entries(queryParams)) {
        if (Array.isArray(value)) {
          for (const v of value) params = params.append(key, String(v));
        } else if (value !== undefined) {
          params = params.set(key, String(value));
        }
      }
    }
    let headers = new HttpHeaders();
    if (headerParams) {
      for (const [key, value] of Object.entries(headerParams)) {
        if (value !== undefined) headers = headers.set(key, String(value));
      }
    }
    return this.http.get<listResourcesResponse>(`/resources`, { params, headers });
  }

  getResource(pathParams: getResourcePathParams, headerParams?: getResourceHeaderParams, cookieParams?: getResourceCookieParams): Observable<getResourceResponse> {
    let headers = new HttpHeaders();
    if (headerParams) {
      for (const [key, value] of Object.entries(headerParams)) {
        if (value !== undefined) headers = headers.set(key, String(value));
      }
    }
    if (cookieParams) {
      const cookie = Object.entries(cookieParams).filter(([, v]) => v !== undefined).map(([k, v]) => `${k}=${v}`).join('; ');
      headers = headers.set('Cookie', cookie);
    }
    return this.http.get<getResourceResponse>(`/resources/${pathParams.resourceId}`, { headers });
  }

}
