crates/emitter-angular/tests/snapshots/snapshots__snapshot_inline_schemas_angular.snap
---
source: crates/emitter-angular/tests/snapshots.rs
expression: emit_angular(yaml)
---
// Generated by oa-forge. Do not edit.

import { Injectable } from '@angular/core';
import { HttpClient, HttpParams } from '@angular/common/http';
import type { Observable } from 'rxjs';
import type { getStatusResponse, echoResponse, echoBody, getConfigResponse, getItemHistoryPathParams, getItemHistoryResponse } from './types.gen';

@Injectable({ providedIn: 'root' })
export class ApiService {
  constructor(private http: HttpClient) {}

  getStatus(): Observable<getStatusResponse> {
    return this.http.get<getStatusResponse>(`/status`);
  }

  echo(body: echoBody): Observable<echoResponse> {
    return this.http.post<echoResponse>(`/echo`, body);
  }

  getConfig(): Observable<getConfigResponse> {
    return this.http.get<getConfigResponse>(`/config`);
  }

  getItemHistory(pathParams: getItemHistoryPathParams): Observable<getItemHistoryResponse> {
    return this.http.get<getItemHistoryResponse>(`/items/${pathParams.itemId}/history`);
  }

}
