crates/emitter-angular/tests/snapshots/snapshots__snapshot_multipart_paginated_angular.snap
---
source: crates/emitter-angular/tests/snapshots.rs
expression: emit_angular(yaml)
---
// Generated by oa-forge. Do not edit.

import { Injectable } from '@angular/core';
import { HttpClient, HttpParams, HttpHeaders } from '@angular/common/http';
import type { Observable } from 'rxjs';
import type { uploadFileResponse, uploadFileBody, listItemsQueryParams, listItemsResponse, listCursoredQueryParams, listCursoredResponse, updateTextBody } from './types.gen';

@Injectable({ providedIn: 'root' })
export class ApiService {
  constructor(private http: HttpClient) {}

  uploadFile(body: uploadFileBody): Observable<uploadFileResponse> {
    return this.http.post<uploadFileResponse>(`/upload`, body);
  }

  listItems(queryParams?: listItemsQueryParams): Observable<listItemsResponse> {
    let params = new HttpParams();
    if (queryParams) {
      for (const [key, value] of Object.entries(queryParams)) {
        if (Array.isArray(value)) {
          for (const v of value) params = params.append(key, String(v));
        } else if (value !== undefined) {
          params = params.set(key, String(value));
        }
      }
    }
    return this.http.get<listItemsResponse>(`/items`, { params });
  }

  listCursored(queryParams?: listCursoredQueryParams): Observable<listCursoredResponse> {
    let params = new HttpParams();
    if (queryParams) {
      for (const [key, value] of Object.entries(queryParams)) {
        if (Array.isArray(value)) {
          for (const v of value) params = params.append(key, String(v));
        } else if (value !== undefined) {
          params = params.set(key, String(value));
        }
      }
    }
    return this.http.get<listCursoredResponse>(`/cursored`, { params });
  }

  updateText(body: updateTextBody): Observable<void> {
    return this.http.put<void>(`/text-upload`, body);
  }

}
