crates/emitter-angular/tests/snapshots/snapshots__snapshot_openapi31_angular.snap
---
source: crates/emitter-angular/tests/snapshots.rs
expression: emit_angular(yaml)
---
// Generated by oa-forge. Do not edit.

import { Injectable } from '@angular/core';
import { HttpClient, HttpParams, HttpHeaders } from '@angular/common/http';
import type { Observable } from 'rxjs';
import type { listItemsQueryParams, listItemsResponse, getItemPathParams, getItemResponse, createCoordinateResponse, createCoordinateBody } from './types.gen';

@Injectable({ providedIn: 'root' })
export class ApiService {
  constructor(private http: HttpClient) {}

  listItems(queryParams?: listItemsQueryParams): Observable<listItemsResponse> {
    let params = new HttpParams();
    if (queryParams) {
      for (const [key, value] of Object.entries(queryParams)) {
        if (Array.isArray(value)) {
          for (const v of value) params = params.append(key, String(v));
        } else if (value !== undefined) {
          params = params.set(key, String(value));
        }
      }
    }
    return this.http.get<listItemsResponse>(`/items`, { params });
  }

  getItem(pathParams: getItemPathParams): Observable<getItemResponse> {
    return this.http.get<getItemResponse>(`/items/${pathParams.itemId}`);
  }

  createCoordinate(body: createCoordinateBody): Observable<createCoordinateResponse> {
    return this.http.post<createCoordinateResponse>(`/coordinates`, body);
  }

}
