crates/emitter-angular/tests/snapshots/snapshots__snapshot_petstore_angular.snap
---
source: crates/emitter-angular/tests/snapshots.rs
expression: emit_angular(yaml)
---
// Generated by oa-forge. Do not edit.

import { Injectable } from '@angular/core';
import { HttpClient, HttpParams, HttpHeaders } from '@angular/common/http';
import type { Observable } from 'rxjs';
import type { listPetsQueryParams, listPetsResponse, createPetResponse, createPetBody, getPetPathParams, getPetResponse, deletePetPathParams } from './types.gen';

@Injectable({ providedIn: 'root' })
export class ApiService {
  constructor(private http: HttpClient) {}

  listPets(queryParams?: listPetsQueryParams): Observable<listPetsResponse> {
    let params = new HttpParams();
    if (queryParams) {
      for (const [key, value] of Object.entries(queryParams)) {
        if (Array.isArray(value)) {
          for (const v of value) params = params.append(key, String(v));
        } else if (value !== undefined) {
          params = params.set(key, String(value));
        }
      }
    }
    return this.http.get<listPetsResponse>(`/pets`, { params });
  }

  createPet(body: createPetBody): Observable<createPetResponse> {
    return this.http.post<createPetResponse>(`/pets`, body);
  }

  getPet(pathParams: getPetPathParams): Observable<getPetResponse> {
    return this.http.get<getPetResponse>(`/pets/${pathParams.petId}`);
  }

  deletePet(pathParams: deletePetPathParams): Observable<void> {
    return this.http.delete<void>(`/pets/${pathParams.petId}`);
  }

}
