crates/emitter-angular/tests/snapshots/snapshots__snapshot_reserved_keywords_angular.snap
---
source: crates/emitter-angular/tests/snapshots.rs
expression: emit_angular(yaml)
---
// Generated by oa-forge. Do not edit.

import { Injectable } from '@angular/core';
import { HttpClient, HttpParams } from '@angular/common/http';
import type { Observable } from 'rxjs';
import type { listItemsResponse, createItemResponse, createItemBody } from './types.gen';

@Injectable({ providedIn: 'root' })
export class ApiService {
  constructor(private http: HttpClient) {}

  listItems(): Observable<listItemsResponse> {
    return this.http.get<listItemsResponse>(`/items`);
  }

  createItem(body: createItemBody): Observable<createItemResponse> {
    return this.http.post<createItemResponse>(`/items`, body);
  }

}
